@@ -4,6 +4,8 @@ File Name: CHANGES
 - Update website and documentation.
 - Fix a bug with MUMPS in VS2010 setting. 
 - Modify debug information in MUMPS interface.
+- Test FASP in the new Pangolin and fix several minor bugs.
+- Fix VS2010 DEBUG mode bug.
 
 09/24/2014 FASP 1.5.9:
 - Update PGMRES code. 
